# biorizon-ai

./: Dockerfile  main.py  pyproject.toml
templates/: index.html
